# app/Models/Event.php
@@ -24,7 +24,7 @@ class Event extends Model
     use HasFactory;
     use SoftDeletes;
     protected $hidden = ['created_at', 'updated_at', 'deleted_at'];
-    protected $fillable = ['name', 'description', 'length', 'start_date'];
+    protected $fillable = ['name', 'description', 'length', 'start_date', 'category_id'];
 
     public function category()
     {
